--- a/django_Course/templates/base.html
+++ b/django_Course/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="alert alert-secondary" role="alert">Bem-vindo a página do {{ titulo }}</div>
+    <div class="alert alert-secondary" role="alert">Bem-vindo a página do Projeto SIDIA</div>
     {% block conteudo %}
 
     {% endblock %}
