--- a/django_Course/cadastros/templates/cadastro/detalhe_cidades.html
+++ b/django_Course/cadastros/templates/cadastro/detalhe_cidades.html
@@ -2,7 +2,9 @@
 
 {% block conteudo %}
     <h1>Detale da cidade</h1>
-    <p>Nome: {{cidade}}  {% if cidade.capital %}<span class="badge badge-primary">Capital</span>{% endif %}</p>
+    <p>Nome: {{cidade.name}}  {% if cidade.capital %}<span class="badge badge-primary">Capital</span>{% endif %}</p>
+    <p>Estado: {{cidade.estado|default_if_none:'-'}}</p>
+    <p>Pais: {{cidade.estado.pais}}</p>
 
     {% if request.user.is_authenticated %}
     <a class="btn btn-danger" href="{% url 'cidades-remove' cidade.id %}"> Apagar registro</a>
