--- a/django_Course/templates/base.html
+++ b/django_Course/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,6 +38,8 @@
     {% block conteudo %}
 
     {% endblock %}
+    <img src="{% static 'img/Sidia-logo.png' %}" class="rounded mx-auto d-block">
+
 </div>
 </body>
 </html>
